# voinst

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  default.profraw  vcpkg-configuration.json  vcpkg.json
.github/: dependabot.yml
.github/actions/apt-fetch-clang/: action.yml
.github/actions/update-msvc/: action.yml  update-vs.ps1
.github/workflows/: build-and-test.yml
include/observable_memory/: allocator.h  namespace_alias.h  resource_allocator.h
include/observable_memory/memory/: memory_pool.h  static_memory_resource.h
include/observable_memory/memory/mimalloc/: allocator.h  resource.h
include/observable_memory/mimalloc/: allocator.h  resource.h
include/voinst/: alias.h  aligned.h  iterator.h  memory_resource.h  namespace_alias.h  rng_buffer_resource.h  static_memory_resource.h
include/voinst/containers/: sequence_gazer.h
include/voinst/resource/: memory_resource.h  rng_buffer_resource.h
tests/: CMakeLists.txt
tests/include/: test.h
tests/src/: memory_pool.cpp  memory_resource.cpp  test.cpp  tests.cpp
tests/src/memory/mimalloc/: allocator.cpp  resource.cpp
tests/src/mimalloc/: allocator.cpp  resource.cpp
tests/src/resource/: memory_resource.cpp  rng_buffer_resource.cpp
